--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vue-social-sharing": "^3.0.0-beta.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
