--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vue-social-sharing": "^3.0.0-beta.11"
+    "vue-social-sharing": "^2.4.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
