--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-analytics": "^5.22.1",
     "vue-router": "^3.0.3",
     "vue-social-sharing": "^2.4.7"
   },
