--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-analytics": "^5.22.1",
+    "vue-highlightjs": "^1.3.3",
     "vue-router": "^3.0.3",
     "vue-social-sharing": "^2.4.7"
   },
